add authenticate API
