# n0stack.swagger.json
@@ -19,6 +19,22 @@
     "version": "version not set"
   },
   "paths": {
+    "/api/v1alpha/authn/public_key": {
+      "get": {
+        "tags": [
+          "AuthenticationService"
+        ],
+        "operationId": "GetAuthenticationTokenPublicKey",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1alphaGetAuthenticationTokenPublicKeyResponse"
+            }
+          }
+        }
+      }
+    },
     "/api/v1alpha/project": {
       "get": {
         "tags": [
@@ -229,66 +245,6 @@
           }
         }
       },
-      "put": {
-        "tags": [
-          "UserService"
-        ],
-        "operationId": "UpdateUser",
-        "parameters": [
-          {
-            "type": "string",
-            "name": "name",
-            "in": "path",
-            "required": true
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1alphaUpdateUserRequest"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaUser"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "UserService"
-        ],
-        "operationId": "CreateUser",
-        "parameters": [
-          {
-            "type": "string",
-            "name": "name",
-            "in": "path",
-            "required": true
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1alphaCreateUserRequest"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1alphaUser"
-            }
-          }
-        }
-      },
       "delete": {
         "tags": [
           "UserService"
@@ -310,22 +266,17 @@
         }
       }
     },
-    "/api/v1alpha/user/{user_name}/public_key/{public_key_name}": {
+    "/api/v1alpha/user/{user.name}": {
       "post": {
         "tags": [
           "UserService"
         ],
-        "operationId": "AddPublicKey",
+        "operationId": "CreateUser",
         "parameters": [
           {
             "type": "string",
-            "name": "user_name",
-            "in": "path",
-            "required": true
-          },
-          {
-            "type": "string",
-            "name": "public_key_name",
+            "description": "Name is a unique field.",
+            "name": "user.name",
             "in": "path",
             "required": true
           },
@@ -334,7 +285,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/v1alphaAddPublicKeyRequest"
+              "$ref": "#/definitions/v1alphaUser"
             }
           }
         ],
@@ -347,23 +298,26 @@
           }
         }
       },
-      "delete": {
+      "patch": {
         "tags": [
           "UserService"
         ],
-        "operationId": "DeletePublicKey",
+        "operationId": "UpdateUser",
         "parameters": [
           {
             "type": "string",
-            "name": "user_name",
+            "description": "Name is a unique field.",
+            "name": "user.name",
             "in": "path",
             "required": true
           },
           {
-            "type": "string",
-            "name": "public_key_name",
-            "in": "path",
-            "required": true
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1alphaUser"
+            }
           }
         ],
         "responses": {
@@ -378,6 +332,34 @@
     }
   },
   "definitions": {
+    "PublicKeyAuthenricateRequestStart": {
+      "type": "object",
+      "properties": {
+        "public_key": {
+          "type": "string"
+        },
+        "user_name": {
+          "type": "string"
+        }
+      }
+    },
+    "PublicKeyAuthenricateResponseChallenge": {
+      "type": "object",
+      "properties": {
+        "challenge": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
+    "PublicKeyAuthenricateResponseResult": {
+      "type": "object",
+      "properties": {
+        "authentication_token": {
+          "type": "string"
+        }
+      }
+    },
     "blockstorageCreateEmptyBlockStorageResponse": {
       "type": "object",
       "properties": {
@@ -394,87 +376,6 @@
         }
       }
     },
-    "mailAlias": {
-      "type": "object",
-      "properties": {
-        "address": {
-          "type": "string"
-        },
-        "members": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "mailListAliasesResponse": {
-      "type": "object",
-      "properties": {
-        "aliases": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/mailAlias"
-          }
-        }
-      }
-    },
-    "mailListMailsResponse": {
-      "type": "object",
-      "properties": {
-        "threads": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/mailThread"
-          }
-        }
-      }
-    },
-    "mailMail": {
-      "type": "object",
-      "properties": {
-        "blob": {
-          "type": "string",
-          "title": "messageを分けてしまってもいいかもしれない、その場合GetMailではblobを返す"
-        },
-        "cc": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "from": {
-          "type": "string"
-        },
-        "message_id": {
-          "type": "string"
-        },
-        "received_time": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "subject": {
-          "type": "string"
-        },
-        "to": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "mailThread": {
-      "type": "object",
-      "properties": {
-        "mails": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/mailMail"
-          }
-        }
-      }
-    },
     "protobufAny": {
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := ptypes.MarshalAny(foo)\n     ...\n     foo := \u0026pb.Foo{}\n     if err := ptypes.UnmarshalAny(any, foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }",
       "type": "object",
@@ -487,6 +388,20 @@
           "description": "Must be a valid serialized protocol buffer of the above specified type.",
           "type": "string",
           "format": "byte"
+        }
+      }
+    },
+    "protobufFieldMask": {
+      "description": "paths: \"f.a\"\n    paths: \"f.b.d\"\n\nHere `f` represents a field in some root message, `a` and `b`\nfields in the message found in `f`, and `d` a field found in the\nmessage in `f.b`.\n\nField masks are used to specify a subset of fields that should be\nreturned by a get operation or modified by an update operation.\nField masks also have a custom JSON encoding (see below).\n\n# Field Masks in Projections\n\nWhen used in the context of a projection, a response message or\nsub-message is filtered by the API to only contain those fields as\nspecified in the mask. For example, if the mask in the previous\nexample is applied to a response message as follows:\n\n    f {\n      a : 22\n      b {\n        d : 1\n        x : 2\n      }\n      y : 13\n    }\n    z: 8\n\nThe result will not contain specific values for fields x,y and z\n(their value will be set to the default, and omitted in proto text\noutput):\n\n\n    f {\n      a : 22\n      b {\n        d : 1\n      }\n    }\n\nA repeated field is not allowed except at the last position of a\npaths string.\n\nIf a FieldMask object is not present in a get operation, the\noperation applies to all fields (as if a FieldMask of all fields\nhad been specified).\n\nNote that a field mask does not necessarily apply to the\ntop-level response message. In case of a REST get operation, the\nfield mask applies directly to the response, but in case of a REST\nlist operation, the mask instead applies to each individual message\nin the returned resource list. In case of a REST custom method,\nother definitions may be used. Where the mask applies will be\nclearly documented together with its declaration in the API.  In\nany case, the effect on the returned resource/resources is required\nbehavior for APIs.\n\n# Field Masks in Update Operations\n\nA field mask in update operations specifies which fields of the\ntargeted resource are going to be updated. The API is required\nto only change the values of the fields as specified in the mask\nand leave the others untouched. If a resource is passed in to\ndescribe the updated values, the API ignores the values of all\nfields not covered by the mask.\n\nIf a repeated field is specified for an update operation, new values will\nbe appended to the existing repeated field in the target resource. Note that\na repeated field is only allowed in the last position of a `paths` string.\n\nIf a sub-message is specified in the last position of the field mask for an\nupdate operation, then new value will be merged into the existing sub-message\nin the target resource.\n\nFor example, given the target message:\n\n    f {\n      b {\n        d: 1\n        x: 2\n      }\n      c: [1]\n    }\n\nAnd an update message:\n\n    f {\n      b {\n        d: 10\n      }\n      c: [2]\n    }\n\nthen if the field mask is:\n\n paths: [\"f.b\", \"f.c\"]\n\nthen the result will be:\n\n    f {\n      b {\n        d: 10\n        x: 2\n      }\n      c: [1, 2]\n    }\n\nAn implementation may provide options to override this default behavior for\nrepeated and message fields.\n\nIn order to reset a field's value to the default, the field must\nbe in the mask and set to the default value in the provided resource.\nHence, in order to reset all fields of a resource, provide a default\ninstance of the resource and set all fields in the mask, or do\nnot provide a mask as described below.\n\nIf a field mask is not present on update, the operation applies to\nall fields (as if a field mask of all fields has been specified).\nNote that in the presence of schema evolution, this may mean that\nfields the client does not know and has therefore not filled into\nthe request will be reset to their default. If this is unwanted\nbehavior, a specific service may require a client to always specify\na field mask, producing an error if not.\n\nAs with get operations, the location of the resource which\ndescribes the updated values in the request message depends on the\noperation kind. In any case, the effect of the field mask is\nrequired to be honored by the API.\n\n## Considerations for HTTP REST\n\nThe HTTP kind of an update operation which uses a field mask must\nbe set to PATCH instead of PUT in order to satisfy HTTP semantics\n(PUT must only be used for full updates).\n\n# JSON Encoding of Field Masks\n\nIn JSON, a field mask is encoded as a single string where paths are\nseparated by a comma. Fields name in each path are converted\nto/from lower-camel naming conventions.\n\nAs an example, consider the following message declarations:\n\n    message Profile {\n      User user = 1;\n      Photo photo = 2;\n    }\n    message User {\n      string display_name = 1;\n      string address = 2;\n    }\n\nIn proto a field mask for `Profile` may look as such:\n\n    mask {\n      paths: \"user.display_name\"\n      paths: \"photo\"\n    }\n\nIn JSON, the same mask is represented as below:\n\n    {\n      mask: \"user.displayName,photo\"\n    }\n\n# Field Masks and Oneof Fields\n\nField masks treat fields in oneofs just as regular fields. Consider the\nfollowing message:\n\n    message SampleMessage {\n      oneof test_oneof {\n        string name = 4;\n        SubMessage sub_message = 9;\n      }\n    }\n\nThe field mask can be:\n\n    mask {\n      paths: \"name\"\n    }\n\nOr:\n\n    mask {\n      paths: \"sub_message\"\n    }\n\nNote that oneof type names (\"test_oneof\" in this case) cannot be used in\npaths.\n\n## Field Mask Verification\n\nThe implementation of any API method which has a FieldMask type field in the\nrequest should verify the included field paths, and return an\n`INVALID_ARGUMENT` error if any path is duplicated or unmappable.",
+      "type": "object",
+      "title": "`FieldMask` represents a set of symbolic field paths, for example:",
+      "properties": {
+        "paths": {
+          "description": "The set of field mask paths.",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
@@ -529,20 +444,6 @@
         }
       }
     },
-    "v1alphaAddPublicKeyRequest": {
-      "type": "object",
-      "properties": {
-        "public_key": {
-          "type": "string"
-        },
-        "public_key_name": {
-          "type": "string"
-        },
-        "user_name": {
-          "type": "string"
-        }
-      }
-    },
     "v1alphaCreateProjectRequest": {
       "type": "object",
       "properties": {
@@ -551,29 +452,6 @@
           "additionalProperties": {
             "type": "string"
           }
-        },
-        "labels": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
-        },
-        "name": {
-          "type": "string"
-        }
-      }
-    },
-    "v1alphaCreateUserRequest": {
-      "type": "object",
-      "properties": {
-        "annotations": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
-        },
-        "display_name": {
-          "type": "string"
         },
         "labels": {
           "type": "object",
@@ -647,27 +525,7 @@
         "MEMBER"
       ]
     },
-    "v1alphaPublicKeyAuthenricateResponse": {
-      "type": "object",
-      "properties": {
-        "authentication_token": {
-          "$ref": "#/definitions/v1alphaPublicKeyAuthenricationResult"
-        },
-        "challenge": {
-          "$ref": "#/definitions/v1alphaPublicKeyAuthenricationChallenge"
-        }
-      }
-    },
-    "v1alphaPublicKeyAuthenricationChallenge": {
-      "type": "object",
-      "properties": {
-        "challenge": {
-          "type": "string",
-          "format": "byte"
-        }
-      }
-    },
-    "v1alphaPublicKeyAuthenricationChallengeToken": {
+    "v1alphaPublicKeyAuthenricateRequestResponse": {
       "type": "object",
       "properties": {
         "challenge_token": {
@@ -675,22 +533,14 @@
         }
       }
     },
-    "v1alphaPublicKeyAuthenricationResult": {
+    "v1alphaPublicKeyAuthenricateResponse": {
       "type": "object",
       "properties": {
-        "authentication_token": {
-          "type": "string"
-        }
-      }
-    },
-    "v1alphaPublicKeyAuthenricationStart": {
-      "type": "object",
-      "properties": {
-        "project_name": {
-          "type": "string"
+        "challenge": {
+          "$ref": "#/definitions/PublicKeyAuthenricateResponseChallenge"
         },
-        "user_name": {
-          "type": "string"
+        "result": {
+          "$ref": "#/definitions/PublicKeyAuthenricateResponseResult"
         }
       }
     },
@@ -702,29 +552,6 @@
           "additionalProperties": {
             "type": "string"
           }
-        },
-        "labels": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
-        },
-        "name": {
-          "type": "string"
-        }
-      }
-    },
-    "v1alphaUpdateUserRequest": {
-      "type": "object",
-      "properties": {
-        "annotations": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
-        },
-        "display_name": {
-          "type": "string"
         },
         "labels": {
           "type": "object",
